fix burger position on mobile

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -287,4 +287,16 @@
   .header__username {
     display: none;
   }
+
+    .header__inner {
+    justify-content: space-between;
+  }
+
+  .header__nav {
+    display: none;
+  }
+
+  .header__actions {
+    margin-left: auto;
+  }
 }
